<<<<<<< Updated upstream
[gd_scene load_steps=28 format=2]
=======
[gd_scene load_steps=30 format=2]
>>>>>>> Stashed changes

[ext_resource path="res://Scenes/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Images/dead-grass.jpg" type="Texture" id=2]
[ext_resource path="res://Images/hdri.jpg" type="Texture" id=3]
[ext_resource path="res://Buildings/Maja Scene/maja1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Buildings/Maja Scene/maja2.tscn" type="PackedScene" id=5]
[ext_resource path="res://Buildings/Maja Scene/maja4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Buildings/Maja Scene/maja5.tscn" type="PackedScene" id=7]
[ext_resource path="res://Buildings/Maja Scene/maja3.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Object scenes/Sang.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/Build.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Object scenes/kiisu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Object scenes/kubik.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Object scenes/truck.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Object scenes/tree.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Object scenes/tool.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Object scenes/trash.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Object scenes/PaulJaagup.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Object scenes/knife.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/Object scenes/vape_particle.tres" type="CubeMesh" id=20]
[ext_resource path="res://Scenes/Object scenes/vanamees.tscn" type="PackedScene" id=21]

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_world_triplanar = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
distance_fade_mode = 2
distance_fade_min_distance = 0.0
distance_fade_max_distance = 0.0

[sub_resource type="ParticlesMaterial" id=8]
lifetime_randomness = 0.69
emission_shape = 1
emission_sphere_radius = 1.0
spread = 100.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 5.0
initial_velocity_random = 1.0
scale_random = 0.33
color = Color( 1, 1, 1, 0.121569 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_world_triplanar = true
albedo_color = Color( 0.333333, 0.329412, 0.239216, 1 )
albedo_texture = ExtResource( 2 )
metallic = 0.28
metallic_specular = 0.0
uv1_scale = Vector3( 0.107, 1, 0.105 )
uv1_triplanar = true
uv1_triplanar_sharpness = 0.535887

[sub_resource type="PanoramaSky" id=5]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=4]
background_mode = 2
background_sky = SubResource( 5 )
fog_enabled = true
fog_color = Color( 0, 0, 0, 1 )
fog_sun_color = Color( 0.494118, 0.152941, 0.0470588, 1 )
fog_sun_amount = 1.0
fog_depth_begin = 0.0
fog_depth_end = 328.6
fog_depth_curve = 0.378927
fog_transmit_curve = 1.1487
fog_height_min = 2295.7
fog_height_max = 914.3
fog_height_curve = 1.41421
dof_blur_far_distance = 721.93

[sub_resource type="NavigationMesh" id=9]
vertices = PoolVector3Array( -14.2601, 2.40909, -27.1013, -11.2601, 2.40909, -28.1013, -11.2601, 2.40909, -29.1013, -20.2601, 2.40909, -29.1013, -28.2601, 2.40909, -17.1013, -26.2601, 2.40909, -17.1013, -25.2601, 2.40909, -20.1013, -28.2601, 2.40909, -29.1013, -14.2601, 2.40909, -25.1013, -14.2601, 2.40909, -27.1013, -20.2601, 2.40909, -29.1013, -28.2601, 2.40909, -29.1013, -25.2601, 2.40909, -20.1013, -20.2601, 2.40909, -19.1013, -11.2601, 2.40909, -29.1013, -11.2601, 2.40909, -28.1013, -8.2601, 2.40909, -27.1013, -2.2601, 2.40909, -29.1013, -25.2601, 2.40909, -15.1013, -26.2601, 2.40909, -17.1013, -28.2601, 2.40909, -17.1013, -28.2601, 2.40909, -9.1013, -11.2601, 2.40909, -3.1013, -12.2601, 2.40909, -8.1013, -15.2601, 2.40909, -0.101299, -11.2601, 2.40909, -3.1013, -15.2601, 2.40909, -0.101299, -9.2601, 2.40909, -0.101299, -6.2601, 2.40909, -4.1013, -12.2601, 2.40909, -8.1013, -7.2601, 2.40909, -9.1013, -2.2601, 2.40909, -15.1013, -9.2601, 2.40909, -22.1013, -13.2601, 2.40909, -22.1013, -21.2601, 2.40909, -15.1013, -6.2601, 2.40909, -4.1013, -9.2601, 2.40909, -0.101299, -2.2601, 2.40909, -0.101299, -2.2601, 2.40909, -8.1013, -28.2601, 2.40909, -9.1013, -28.2601, 2.40909, -0.101299, -22.2601, 2.40909, -0.101299, -7.2601, 2.40909, -9.1013, -6.2601, 2.40909, -4.1013, -2.2601, 2.40909, -8.1013, -2.2601, 2.40909, -15.1013, -21.2601, 2.40909, -15.1013, -25.2601, 2.40909, -15.1013, -28.2601, 2.40909, -9.1013, -22.2601, 2.40909, -0.101299, -15.2601, 2.40909, -0.101299, -12.2601, 2.40909, -8.1013, -2.2601, 2.40909, -15.1013, -2.2601, 2.40909, -22.1013, -9.2601, 2.40909, -22.1013, -13.2601, 2.40909, -22.1013, -14.2601, 2.40909, -25.1013, -20.2601, 2.40909, -19.1013, -21.2601, 2.40909, -15.1013, -2.2601, 2.40909, -22.1013, -2.2601, 2.40909, -29.1013, -8.2601, 2.40909, -27.1013, -9.2601, 2.40909, -22.1013 )
polygons = [ PoolIntArray( 1, 0, 2 ), PoolIntArray( 2, 0, 3 ), PoolIntArray( 5, 4, 6 ), PoolIntArray( 6, 4, 7 ), PoolIntArray( 9, 8, 10 ), PoolIntArray( 10, 8, 13 ), PoolIntArray( 10, 13, 12 ), PoolIntArray( 10, 12, 11 ), PoolIntArray( 15, 14, 16 ), PoolIntArray( 16, 14, 17 ), PoolIntArray( 19, 18, 20 ), PoolIntArray( 20, 18, 21 ), PoolIntArray( 24, 23, 22 ), PoolIntArray( 28, 27, 25 ), PoolIntArray( 25, 27, 26 ), PoolIntArray( 30, 29, 31 ), PoolIntArray( 31, 29, 32 ), PoolIntArray( 32, 29, 33 ), PoolIntArray( 33, 29, 34 ), PoolIntArray( 36, 35, 37 ), PoolIntArray( 37, 35, 38 ), PoolIntArray( 41, 40, 39 ), PoolIntArray( 43, 42, 44 ), PoolIntArray( 44, 42, 45 ), PoolIntArray( 47, 46, 48 ), PoolIntArray( 48, 46, 49 ), PoolIntArray( 49, 46, 50 ), PoolIntArray( 50, 46, 51 ), PoolIntArray( 54, 53, 52 ), PoolIntArray( 56, 55, 57 ), PoolIntArray( 57, 55, 58 ), PoolIntArray( 62, 61, 59 ), PoolIntArray( 59, 61, 60 ) ]
cell_size = 1.0
cell_height = 1.5
agent_radius = 1.3
agent_max_slope = 13.0

[sub_resource type="CubeMesh" id=10]

[node name="Spatial" type="Spatial"]
script = ExtResource( 11 )

[node name="particle_cache" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.4465, -0.158 )
material_override = SubResource( 7 )
emitting = false
amount = 1
lifetime = 0.01
one_shot = true
visibility_aabb = AABB( -4, -5.2285, -4, 8, 10.457, 8 )
local_coords = false
process_material = SubResource( 8 )
draw_pass_1 = ExtResource( 20 )

[node name="ground" type="StaticBody" parent="."]
transform = Transform( 1000, 0, 0, 0, 1, 0, 0, 0, 1000, 0, 0, 0 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape" type="CollisionShape" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.03119, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0168359, -1.01223, 0.0261333 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.957461, 0.288564, 0, -0.0210988, 0.0700061, 0.997323, 0.287792, -0.954898, 0.0731164, -0.424252, 217.398, 0.0717163 )
light_energy = 16.0
light_indirect_energy = 8.633
light_bake_mode = 2
shadow_enabled = true
shadow_color = Color( 1, 1, 1, 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="Character" parent="." instance=ExtResource( 1 )]
transform = Transform( 2.009, 0, 0, 0, 1.087, 0, 0, 0, 1.75, 0, -0.01, 7.827 )

[node name="KinematicBody" parent="Character" index="0"]
collision_mask = 0

[node name="Area" parent="Character/KinematicBody" index="0"]
collision_layer = 5

[node name="Head" parent="Character/KinematicBody" index="3"]
transform = Transform( 0.913, 0, 0, 0, 0.076, 0, 0, 0, 0.548, 0.0381853, 2.86985, -0.309793 )

[node name="Camera" parent="Character/KinematicBody/Head" index="0"]
transform = Transform( 0.545192, 0, 0, 0, 12.1048, 0, 0, 0, 1.04275, -0.0409144, 4.52132, -0.0700321 )
cull_mask = 1048559

[node name="parem" parent="Character/KinematicBody/paulbod" index="2"]
visible = true

[node name="vasak2" parent="Character/KinematicBody/paulbod" index="4"]
transform = Transform( 0.517633, 0.000981174, 5.30142e-08, 0.000623062, -0.728677, 0.120925, 0.000214673, -0.250971, -0.351097, 0.306656, 1.92503, -0.771634 )

[node name="knifeheld" parent="Character/KinematicBody/paulbod/vasak2" index="1"]
visible = false

[node name="vedlabar" parent="Character/KinematicBody/paulbod/vasak3" index="2"]
visible = true

[node name="InteractRay" parent="Character/KinematicBody" index="5"]
transform = Transform( 2.528, 0, 0, 0, 4.609, 0, 0, 0, 1.75, -0.00258436, 2.62857, -0.337574 )

[node name="RichTextLabel" parent="Character/KinematicBody/InteractRay/Diabox" index="0"]
margin_left = -349.0
margin_top = -71.0
margin_right = 361.0
margin_bottom = 79.0

[node name="Sang" parent="." instance=ExtResource( 9 )]

[node name="kiisu" parent="." groups=["Kass"] instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0.00790215, 0 )

[node name="CollisionShape" parent="kiisu/kas" index="0"]
transform = Transform( 0.546, 0, 0, 0, 0.778, 0, 0, 0, 0.14, -0.0321341, 0.506121, -0.0794468 )

[node name="Area" parent="kiisu/kas" index="9" groups=["Kass"]]
collision_layer = 8
collision_mask = 0

[node name="KiisuCutscene" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="KiisuCutscene"]
transform = Transform( 0.0269447, 0, 0.999637, 0, 1, 0, -0.999637, 0, 0.0269447, 10.915, 0.67, 0 )

[node name="Camera2" type="Camera" parent="KiisuCutscene"]
transform = Transform( -3.38242e-08, -0.43814, 0.898907, 0, 0.898907, 0.43814, -1, 1.48197e-08, -3.04048e-08, 12.046, 4.22339, 0 )

[node name="Camera3" type="Camera" parent="KiisuCutscene"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.60587, 3.04532, 5.39338 )
fov = 61.3
near = 0.01
far = 193.7

[node name="kubik" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.0999842, 0.000687118, 0.00164044, -0.000705065, 0.0999916, 0.00109081, -0.0016328, -0.0011022, 0.0999806, 0, 2.21791, 4.66561 )

[node name="CollisionShape" parent="kubik/Kubik" index="0"]
disabled = false

[node name="SourArea" parent="kubik/Kubik" index="2" groups=["Kubik"]]
collision_layer = 8
collision_mask = 0

[node name="knife" parent="." instance=ExtResource( 19 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0314455, 3.14268, -7.45391 )

[node name="knifearea" parent="knife/knifekin" index="2" groups=["knife"]]
transform = Transform( 1.14874, 0, 0, 0, 1.94669, 0, 0, 0, 1.34853, 0, 0.0920856, 0 )
collision_layer = 8
collision_mask = 0

[node name="vanamees" parent="." instance=ExtResource( 21 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 16.6815, 0.570813, 13.8645 )

<<<<<<< Updated upstream
[node name="JAKEPAUL" parent="." instance=ExtResource( 18 )]
transform = Transform( -0.193584, 0, 0.981084, 0, 1, 0, -0.981084, 0, -0.193584, -5.38522, 0.687128, 3.92921 )

=======
>>>>>>> Stashed changes
[node name="Enviroment" type="Spatial" parent="."]

[node name="truck" parent="Enviroment" instance=ExtResource( 14 )]
transform = Transform( 0.000872687, 0, 1, 0, 1, 0, -1, 0, 0.000872687, -6.93726, 0, 28.7638 )

[node name="Camera" parent="Enviroment/truck" index="2"]
transform = Transform( 0.685921, -0.324014, 0.651558, 0, 0.895396, 0.445271, -0.727676, -0.305421, 0.61417, 7.35889, 4.95831, 6.92579 )
visible = false

[node name="Light" parent="Enviroment/truck" index="3"]
transform = Transform( -0.290865, -0.771101, 0.566393, -0.0551891, 0.604525, 0.794672, -0.955171, 0.199883, -0.218391, 4.07624, 5.90386, -1.00545 )

[node name="Kusepu" type="Spatial" parent="Enviroment"]

[node name="kusepu" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8906, 0, 19.0527 )

[node name="kusepu2" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.5881, 0, 2.3149 )

[node name="kusepu4" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8906, 0, -18.3932 )

[node name="kusepu3" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -15.1684, 0, 19.0527 )

[node name="kusepu5" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.61841, 0, -20.4298 )

[node name="kusepu6" parent="Enviroment/Kusepu" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6093, 0, -11.623 )

[node name="tool" parent="Enviroment" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 13.1025 )

[node name="prugikast" parent="Enviroment" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 0.826, 0, 0, 0, 0.967, 0, 0, 4.668 )

[node name="Majad" type="Spatial" parent="."]

[node name="maja" parent="Majad" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -120.732, 0, -70.6106 )

[node name="maja2" parent="Majad" instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 116.04, 0, -35.7882 )

[node name="maja3" parent="Majad" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -121.13, 0, 0 )

[node name="maja4" parent="Majad" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.959, 0, 59.596 )

[node name="maja5" parent="Majad" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -87.1636 )
<<<<<<< Updated upstream
=======

[node name="Navigation" type="Navigation" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.355019, 0, 0 )

[node name="JAKEPAUL" parent="Navigation" instance=ExtResource( 18 )]
transform = Transform( -0.193584, 0, 0.981084, 0, 1, 0, -0.981084, 0, -0.193584, -33.2112, 0.687128, -10.0853 )
__meta__ = {
"_edit_group_": true
}

[node name="Jaak" parent="Navigation/JAKEPAUL" index="1"]
transform = Transform( 1, 0, 4.47035e-08, 0, 1, 0, -4.47035e-08, 0, 1, 22.0839, 4.76837e-07, 25.7038 )
collision_mask = 5

[node name="AreaView" parent="Navigation/JAKEPAUL/Jaak" index="6"]
collision_mask = 5

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="Navigation"]
transform = Transform( 0.978193, 0, 0, 0, 1, 0, 0, 0, 1, 0.661091, 0, -22.6558 )
navmesh = SubResource( 9 )

[node name="MeshInstance" type="MeshInstance" parent="Navigation/NavigationMeshInstance"]
transform = Transform( 14.8434, 0, 0, 0, -0.0102747, 0, 0, 0, 16.6315, -15.4167, 0, -14.4698 )
mesh = SubResource( 10 )

[node name="kusepu" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -23.3426, -0.55512, -17.5362 )

[node name="kusepu2" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.492, -0.55512, -25.2292 )

[node name="kusepu3" parent="Navigation/NavigationMeshInstance" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.24621, -0.55512, -5.64154 )
>>>>>>> Stashed changes

[connection signal="stab" from="Character/KinematicBody" to="Character/KinematicBody/InteractRay" method="_on_KinematicBody_stab"]
[connection signal="body_entered" from="Character/KinematicBody/Area" to="Navigation/JAKEPAUL/Jaak" method="_on_Area_body_entered"]
[connection signal="CatScene" from="Character/KinematicBody/InteractRay" to="." method="_on_InteractRay_CatScene"]
[connection signal="KnifeInteract" from="Character/KinematicBody/InteractRay" to="knife" method="_on_InteractRay_KnifeInteract"]
[connection signal="KubikInteract" from="Character/KinematicBody/InteractRay" to="kubik/Kubik" method="_on_InteractRay_KubikInteract"]
[connection signal="SangCut" from="Character/KinematicBody/InteractRay" to="." method="_on_InteractRay_SangCut"]
[connection signal="SangCut" from="Character/KinematicBody/InteractRay" to="Sang" method="_on_InteractRay_SangCut"]
<<<<<<< Updated upstream
[connection signal="hurtdummy" from="Character/KinematicBody/InteractRay" to="JAKEPAUL" method="_on_InteractRay_hurtdummy"]
=======
[connection signal="hurtdummy" from="Character/KinematicBody/InteractRay" to="Navigation/JAKEPAUL" method="_on_InteractRay_hurtdummy"]
>>>>>>> Stashed changes
[connection signal="hurtvanamees" from="Character/KinematicBody/InteractRay" to="vanamees" method="_on_InteractRay_hurtvanamees"]
[connection signal="timeout" from="Navigation/JAKEPAUL/Timer" to="Navigation/JAKEPAUL/Jaak" method="_on_Timer_timeout"]

[editable path="Character"]
[editable path="Character/KinematicBody/paulbod"]
[editable path="Character/KinematicBody/paulbod/vasak2/knifeheld"]
[editable path="Sang"]
[editable path="kiisu"]
[editable path="kubik"]
[editable path="knife"]
[editable path="vanamees"]
<<<<<<< Updated upstream
[editable path="JAKEPAUL"]
[editable path="Enviroment/truck"]
=======
[editable path="Enviroment/truck"]
[editable path="Navigation/JAKEPAUL"]
>>>>>>> Stashed changes
